load("@aspect_rules_py//py:defs.bzl", "py_library")

py_library(
    name = "utilities_common",
    srcs = [
        "__init__.py",
        "auto_techsupport_helper.py",
        "bgp.py",
        "bgp_util.py",
        "chassis.py",
        "cli.py",
        "constants.py",
        "db.py",
        "dhcp_relay_util.py",
        "error_reporter.py",
        "flock.py",
        "general.py",
        "helper.py",
        "hft.py",
        "intf_filter.py",
        "module.py",
        "multi_asic.py",
        "netstat.py",
        "platform_sfputil_helper.py",
        "portstat.py",
        "sfp_helper.py",
        "srv6stat.py",
        "switch_hash.py",
        "switch_trimming.py",
        "switchstat.py",
        "util_base.py",
    ],
    visibility = ["//:__subpackages__"],
    deps = ["//:all_deps"],
)
